# scCAFM

./: .gitignore  README.md  pyproject.toml
configs/: efm_pretrain.yaml  eval_cell_fate.yaml  eval_grn.yaml  meta.yaml  model.yaml  pretrain.yaml  pretrain_sfm.yaml  sfm.yaml  sfm_pretrain.yaml  tokenizer.yaml
data/: README.md  array_download_partition.sh  array_process_allcounts.sh  build_gene_embeddings.py  build_gene_embeddings.sh  build_gene_go_terms.py  build_soma_idx.py  build_soma_idx.sh  check_and_redownload_h5ad.py  data_config.py  demo_download.sh  download_partition.py  download_partition.sh  query_list.txt  run_download_all.py  run_download_all.sh
docs/: efm_cell_fate.ipynb  sfm_cell_grn.ipynb  sfm_dataset_grn.ipynb  sfm_grn.ipynb  sfm_grn_cell_specific_eval.ipynb  sfm_grn_dataset_eval.ipynb
resources/: commands.sh  cond_dict.csv  token_dictionary.csv
sccafm/: __init__.py  loss.py  trainer.py
sccafm/models/: __init__.py  embedding.py  sfm.py  utils.py  vgae.py
scripts/: check_gene_descriptions.py  commands.sh  efm_pretrain.sh  eval_grn.sh  pretrain.sh  push_assets_to_hf.sh  push_ckpt.sh  push_ckpt_to_assets.sh  run_eval_grn.py  run_gene_embedding.py  run_gene_text.py  run_grn.sh  run_pretrain.py  sfm_pretrain.sh
src/: assets.py  checkpoint.py  distributed.py  experiment.py  utils.py
src/data/: __init__.py  builders.py  collator.py  dataset.py  preprocess.py  tokenizer.py
src/evaluator/: __init__.py  cell_fate.py  grn.py  metrics.py  tutorials.py
src/inference/: __init__.py  cell_fate.py  grn.py
src/losses/: __init__.py  dag.py  elbo.py  prior.py  sfm.py
src/models/: FA2.py  FA4.py  __init__.py  attention.py  backbone.py  dataset.py  efm.py  embedding.py  gene_ordering.py  router.py  sfm.py  tokenizer.py  wrapper.py
src/models/heads/: vgae.py
src/scallop/models/: inference.py  tokenizer.py  transformer.py
src/sccafm/: __init__.py  assets.py  builder.py  checkpoint.py  config.py  distributed.py  evaluator.py  load.py  loss.py  tokenizer.py  trainer.py
src/sccafm/data/: builders.py  dataset.py  preprocess.py
src/sccafm/evaluator/: __init__.py  cell_fate.py
src/sccafm/evaluators/: __init__.py  grn_evaluator.py  metric.py
src/sccafm/inference/: __init__.py  grn.py
src/sccafm/losses/: __init__.py  core.py  dag.py  efm.py  elbo.py  prior.py  reduction.py  sfm.py  sparsity.py  vgae.py
src/sccafm/models/: FA2.py  __init__.py  attention.py  backbone.py  embedding.py  initialization.py  sfm.py  utils.py  vgae.py
src/sccafm/runner/: eval_grn.py  pretrain_sfm.py
src/sccafm/runners/: __init__.py  eval_grn.py  pretrain_sfm.py
src/sccafm/runtime/: __init__.py  distributed.py  launch.py  logging.py  model_stats.py
src/sccafm/trainer/: builders.py
src/trainer/: builders.py  efm_pretrain.py  pretrain.py  sfm_pretrain.py
test/: FA2.py  FA4.py  __init__.py  attention_backend.py  test_FA2.py  test_FA4.py
