[project]
name = "scCAFM"
version = "0.1.0"
description = "Causality-aware single-cell RNA-Seq foundation model with causal gene regulation modeling"
authors = [
    { name = "Kaichen Xu", email = "KXU248@emory.edu" }
]
readme = "README.md"
license = { text = "GPL-3.0" }
requires-python = ">=3.10,<3.15"

keywords = [
    "single-cell",
    "causal-inference",
    "foundation-model",
    "deep-learning",
    "scRNAseq"
]

dependencies = [
    "numpy>=1.24,<3.0",
    "pandas>=2.0,<3.0",
    "scanpy>=1.10,<2.0",
    "torch>=2.0",
    "leidenalg>=0.10",
    "tqdm>=4.20.0",
    "PyYAML>=3.13"
]


[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy",
]

server = [
    "numpy==2.3.5",
    "pandas==2.3.3",
    "scanpy==1.11.5",
    "torch==2.9.1+cu130",
    "leidenalg==0.10.2",
    "tqdm==4.67.1",
    "PyYAML==6.0.3"
]

cuda = [
    "torch==2.9.1+cu130",
]


[project.urls]
repository = "https://github.com/Catchxu/scCAFM"
homepage = "https://github.com/Catchxu/scCAFM"
documentation = "https://github.com/Catchxu/scCAFM#readme"


[project.scripts]
sccafm-pretrain-sfm = "sccafm.runners.pretrain_sfm:main"
sccafm-eval-grn = "sccafm.runners.eval_grn:main"


[tool.hatch.build.targets.wheel]
packages = [
    "src/sccafm",
    "resources",
    "configs"
]


[tool.hatch.build.targets.sdist]
include = [
    "src/sccafm",
    "README.md",
    "configs",
    "resources",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
