[project]
name = "scCAFM"
version = "0.1.0"
description = "Building a causality-aware single-cell RNA-seq foundation model via context-specific causal regulation modeling"
authors = [
    { name = "Kaichen Xu", email = "KXU248@emory.edu" }
]
readme = "README.md"
license = { text = "GPL-3.0" }
requires-python = ">=3.10,<3.15"

keywords = [
    "single-cell",
    "causal-inference",
    "foundation-model",
    "deep-learning",
    "scRNAseq"
]

dependencies = [
    "anndata>=0.12,<0.13",
    "huggingface_hub>=0.30,<1.0",
    "numpy>=1.24,<3.0",
    "pandas>=2.0,<3.0",
    "safetensors>=0.4,<1.0",
    "scanpy>=1.10,<2.0",
    "scikit-learn>=1.5,<2.0",
    "scipy>=1.14,<2.0",
    "torch>=2.0",
    "leidenalg>=0.10",
    "tqdm>=4.20.0",
    "PyYAML>=3.13"
]


[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy",
]

py312 = [
    "anndata==0.12.10",
    "huggingface_hub==0.36.2",
    "numpy==2.2.6",
    "pandas==2.3.3",
    "PyYAML==6.0.3",
    "safetensors==0.7.0",
    "scanpy==1.12",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "torch==2.10.0+cu128",
    "leidenalg==0.11.0",
    "tqdm==4.67.3",
    "flash-attn==2.8.3",
]


[project.urls]
repository = "https://github.com/Catchxu/scCAFM"
homepage = "https://github.com/Catchxu/scCAFM"
documentation = "https://github.com/Catchxu/scCAFM#readme"


[project.scripts]
sccafm-pretrain = "src.trainer.pretrain:main"


[tool.hatch.build.targets.wheel]
packages = [
    "src",
    "configs"
]


[tool.hatch.build.targets.sdist]
include = [
    "src",
    "README.md",
    "configs",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
